--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,14 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "lucide-react": "^0.513.0",
+    "pg": "^8.16.0",
     "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.5",
+    "@types/pg": "^8.15.4",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
