--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "drizzle-orm": "^0.44.2",
     "express": "^4.18.2",
     "lucide-react": "^0.513.0",
     "pg": "^8.16.0",
