--- a/server/package.json
+++ b/server/package.json
@@ -11,18 +11,20 @@
     "watch": "tsc -w"
   },
   "dependencies": {
-
     "@prisma/client": "^6.9.0",
-    "firebase-admin": "^13.4.0",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.44.2",
     "express": "^4.18.2",
+    "firebase-admin": "^13.4.0",
     "lucide-react": "^0.513.0",
     "pg": "^8.16.0",
     "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.5",
