--- a/server/package.json
+++ b/server/package.json
@@ -16,12 +16,13 @@
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "drizzle-orm": "^0.44.2",
     "express": "^4.18.2",
     "firebase-admin": "^13.4.0",
     "lucide-react": "^0.513.0",
     "pg": "^8.16.0",
-    "react-router-dom": "^7.6.2"
+    "pg-hstore": "^2.3.4",
+    "react-router-dom": "^7.6.2",
+    "sequelize": "^6.37.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -29,6 +30,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.5",
     "@types/pg": "^8.15.4",
+    "@types/sequelize": "^4.28.20",
     "nodemon": "^3.0.2",
     "prisma": "^6.9.0",
     "ts-node": "^10.9.2",
