--- a/src/server/package.json
+++ b/src/server/package.json
@@ -6,9 +6,10 @@
   "main": "dist/server.js",
   "scripts": {
     "start": "node dist/server.js",
-    "dev": "nodemon src/server.ts",
     "build": "tsc",
-    "watch": "tsc -w"
+    "watch": "tsc -w",
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "nodemon-dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.9.0",
@@ -31,9 +32,10 @@
     "@types/node": "^20.10.5",
     "@types/pg": "^8.15.4",
     "@types/sequelize": "^4.28.20",
-    "nodemon": "^3.0.2",
+    "nodemon": "^3.1.10",
     "prisma": "^6.9.0",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   }
 }
