--- a/src/client/package.json
+++ b/src/client/package.json
@@ -16,6 +16,9 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "firebase": "^11.8.1",
+    "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.513.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
