--- a/src/server/package.json
+++ b/src/server/package.json
@@ -26,6 +26,7 @@
     "sequelize": "^6.37.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
