--- a/src/client/package.json
+++ b/src/client/package.json
@@ -8,7 +8,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
@@ -16,6 +17,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "firebase": "^11.8.1",
+    "jest": "^30.0.4",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
@@ -27,9 +29,13 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.0.13",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.6",
+    "@types/testing-library__react": "^10.0.1",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
