--- a/src/server/package.json
+++ b/src/server/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "node dist/server.js",
     "build": "tsc",
+    "test": "jest",
     "watch": "tsc -w",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "nodemon-dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts"
@@ -19,6 +20,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase-admin": "^13.4.0",
+    "jest": "^30.0.4",
     "lucide-react": "^0.513.0",
     "pg": "^8.16.0",
     "pg-hstore": "^2.3.4",
@@ -30,13 +32,15 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.10.5",
     "@types/pg": "^8.15.4",
     "@types/sequelize": "^4.28.20",
     "nodemon": "^3.1.10",
     "prisma": "^6.9.0",
+    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.8.3"
   }
 }
