--- a/src/package.json
+++ b/src/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "framer-motion": "^12.23.3",
     "jsonwebtoken": "^9.0.2",
